# gen-ai-experiments

./: README.md
exp01/: main.py  pyproject.toml  retrieve_similar_words.py
